--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "NL2 Control Panel",
-  "name": "No Limits 2 Control Panel",
+  "short_name": "Control Panel",
+  "name": "Roller Coaster Control Panel",
   "icons": [
     {
       "src": "favicon.ico",
